--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -10,6 +10,7 @@
 <body>
   <div>
       <h1>Welcome to Andrew Bosset's application</h1>
+      <h2>this is an unnecessary change</h2>
     {{{body}}}
 </div>
 <div>
